--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
+    "BOTNAME": "𝓙𝓸𝓴𝓮𝓡",
     "PREFIX": "#",
     "ADMINBOT": [
-        "100037743553265"
+        "100049426727823"
     ],
     "NDH": [
-        "100037743553265"
+        "100049426727823"
     ],
     "DATABASE": {
         "sqlite": {
