--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22zHgzFa4p%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22CRAYNeNp%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "locale",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.425Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWW3Z4qfzv7xarwUuHAOw64h_Ssi1iX2ASmmwQ.BnU2fO..AAA.0.0.BnrNRF.AWVYV2yBFaY",
+        "value": "0Ce5OZhMDKmMWCT3i.AWU0_aLRyIAOki-4mDjRXjLMMmZk-7dSnt0KRg.BnU2fO..AAA.0.0.BnsRoG.AWV5u_sS8a0",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.628Z"
+        "creation": "2025-02-15T22:49:56.425Z",
+        "lastAccessed": "2025-02-15T22:49:56.426Z"
     },
     {
         "key": "xs",
-        "value": "33%3A-66-bUCTDI1sWg%3A2%3A1739379782%3A-1%3A5903",
+        "value": "34%3AXl-T0C50-OtZAg%3A2%3A1739659782%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.628Z",
-        "lastAccessed": "2025-02-12T21:37:46.629Z"
+        "creation": "2025-02-15T22:49:56.426Z",
+        "lastAccessed": "2025-02-15T22:49:56.426Z"
     },
     {
         "key": "fbl_st",
-        "value": "101037696%3BT%3A28989937",
+        "value": "101327007%3BT%3A28994329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.629Z",
-        "lastAccessed": "2025-02-12T21:37:46.629Z"
+        "creation": "2025-02-15T22:49:56.426Z",
+        "lastAccessed": "2025-02-15T22:49:56.426Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2740%3Btimestamp%3A1739396244",
+        "value": "v2%3Bclient_version%3A2741%3Btimestamp%3A1739659786",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-12T21:37:46.629Z",
-        "lastAccessed": "2025-02-12T21:37:46.629Z"
+        "creation": "2025-02-15T22:49:56.426Z",
+        "lastAccessed": "2025-02-15T22:49:56.426Z"
     }
-]
+        ]
