--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22CRAYNeNp%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22XSGQU6cM%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "locale",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.799Z",
+        "lastAccessed": "2025-02-18T14:02:37.799Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.425Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWU0_aLRyIAOki-4mDjRXjLMMmZk-7dSnt0KRg.BnU2fO..AAA.0.0.BnsRoG.AWV5u_sS8a0",
+        "value": "0Ce5OZhMDKmMWCT3i.AWX0ifV-amKixZkba6-aWgdCSLetyBwjYU1AyQ.BnU2fO..AAA.0.0.BntJLo.AWWYCL7OQRc",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.425Z",
-        "lastAccessed": "2025-02-15T22:49:56.426Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "xs",
-        "value": "34%3AXl-T0C50-OtZAg%3A2%3A1739659782%3A-1%3A5903",
+        "value": "24%3AYSEq3voFLhgjAg%3A2%3A1739887336%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.426Z",
-        "lastAccessed": "2025-02-15T22:49:56.426Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "fbl_st",
-        "value": "101327007%3BT%3A28994329",
+        "value": "101036427%3BT%3A28998122",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.426Z",
-        "lastAccessed": "2025-02-15T22:49:56.426Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2741%3Btimestamp%3A1739659786",
+        "value": "v2%3Bclient_version%3A2743%3Btimestamp%3A1739887346",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-15T22:49:56.426Z",
-        "lastAccessed": "2025-02-15T22:49:56.426Z"
+        "creation": "2025-02-18T14:02:37.800Z",
+        "lastAccessed": "2025-02-18T14:02:37.800Z"
     }
-        ]
+]
