--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22XSGQU6cM%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22ufSDB8RM%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "datr",
@@ -32,17 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.799Z",
-        "lastAccessed": "2025-02-18T14:02:37.799Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "wd",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "c_user",
@@ -86,43 +77,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWX0ifV-amKixZkba6-aWgdCSLetyBwjYU1AyQ.BnU2fO..AAA.0.0.BntJLo.AWWYCL7OQRc",
+        "value": "0Ce5OZhMDKmMWCT3i.AWUjedJJMeKWc3i84Ypderk1vIOPn94PbJSN2g.BnU2fO..AAA.0.0.BntkUy.AWUgfZQL6Zw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "xs",
-        "value": "24%3AYSEq3voFLhgjAg%3A2%3A1739887336%3A-1%3A5903",
+        "value": "34%3A7lFgatOqraeSkQ%3A2%3A1739998514%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "fbl_st",
-        "value": "101036427%3BT%3A28998122",
+        "value": "101537547%3BT%3A28999975",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2743%3Btimestamp%3A1739887346",
+        "value": "v2%3Bclient_version%3A2745%3Btimestamp%3A1739998517",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-18T14:02:37.800Z",
-        "lastAccessed": "2025-02-18T14:02:37.800Z"
+        "creation": "2025-02-19T20:55:33.498Z",
+        "lastAccessed": "2025-02-19T20:55:33.498Z"
     }
 ]
