--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22ufSDB8RM%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22AICyzaLq%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "ps_n",
@@ -50,53 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x733",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100049235086690",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
-    },
-    {
-        "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWUjedJJMeKWc3i84Ypderk1vIOPn94PbJSN2g.BnU2fO..AAA.0.0.BntkUy.AWUgfZQL6Zw",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
-    },
-    {
-        "key": "xs",
-        "value": "34%3A7lFgatOqraeSkQ%3A2%3A1739998514%3A-1%3A5903",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "locale",
@@ -104,25 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100049235086690",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Ce5OZhMDKmMWCT3i.AWX_8MuPBeqC1TmPiK1hx92SH9uPVrdctElnuw.BnU2fO..AAA.0.0.Bntujm.AWVWzZ1LjEc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
+    },
+    {
+        "key": "xs",
+        "value": "43%3AdcsJLeiIa6LFaQ%3A2%3A1740040422%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "fbl_st",
-        "value": "101537547%3BT%3A28999975",
+        "value": "101034408%3BT%3A29000673",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2745%3Btimestamp%3A1739998517",
+        "value": "v2%3Bclient_version%3A2745%3Btimestamp%3A1740040425",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-19T20:55:33.498Z",
-        "lastAccessed": "2025-02-19T20:55:33.498Z"
+        "creation": "2025-02-20T08:34:06.006Z",
+        "lastAccessed": "2025-02-20T08:34:06.006Z"
     }
 ]
