--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22HIFJfnbG%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22tT3e5Dai%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "wd",
@@ -68,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "c_user",
@@ -77,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWUZI_Cqcfvrd4iLlyJ-YOBJxzMj-4O5uzWedA.BnU2fO..AAA.0.0.Bntwwf.AWVRyYej-BM",
+        "value": "0Ce5OZhMDKmMWCT3i.AWW0ULvJNdAqBN1j_S8PNvLaNjw6CPzdXn-zWQ.BnU2fO..AAA.0.0.BnuLRU.AWW9nMpjHRs",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "xs",
-        "value": "22%3AvB6gYTnPSGVHVg%3A2%3A1740049439%3A-1%3A5903",
+        "value": "21%3ASEBAQoA0rm65dA%3A2%3A1740158036%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "fbl_st",
-        "value": "101034872%3BT%3A29001124",
+        "value": "101520266%3BT%3A29002634",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2745%3Btimestamp%3A1740067491",
+        "value": "v2%3Bclient_version%3A2747%3Btimestamp%3A1740158039",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-20T16:05:12.545Z",
-        "lastAccessed": "2025-02-20T16:05:12.545Z"
+        "creation": "2025-02-21T17:14:09.352Z",
+        "lastAccessed": "2025-02-21T17:14:09.352Z"
     }
 ]
