--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22RncUI3lL%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22CpBpX3fE%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWXdnXwjb72Qtxu1fgdfbtGllJuajN37-Zx_Qg.BnU2fO..AAA.0.0.BnuM67.AWXInY-pcmw",
+        "value": "0Ce5OZhMDKmMWCT3i.AWUWwkiQ0amJ7r5Jdqz8Ox4iApAHdPQFJ5wx_A.BnU2fO..AAA.0.0.BnuPbI.AWU8JIU4d_o",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "xs",
-        "value": "19%3A5hwdYOqUoGerjg%3A2%3A1740164795%3A-1%3A5903",
+        "value": "22%3AX4WYzDXhJzKZyQ%3A2%3A1740175048%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2747%3Btimestamp%3A1740164876",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     },
     {
         "key": "fbl_st",
-        "value": "101520301%3BT%3A29002816",
+        "value": "101024740%3BT%3A29002917",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-21T20:16:49.404Z",
-        "lastAccessed": "2025-02-21T20:16:49.404Z"
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2747%3Btimestamp%3A1740175052",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-21T21:57:39.499Z",
+        "lastAccessed": "2025-02-21T21:57:39.499Z"
     }
 ]
